2011-03-03  Tim Marston <edam@waxworlds.org>

	* t.typ: punctuation error, reported to Debian by Percival Tiglao
	  <dragontamer5788@yahoo.com>

2010-12-21  Tim Marston <edam@waxworlds.org>

	* lessons/u.typ, lessons/t.typ: fixed minor typos (thanks to Elmar
	  Zander <elmar@zandere.de> for reporting)

2008-05-12  Paul Goins  <general@vultaire.net>

	* ChangeLog: Minor formatting updates.

2008-05-04  Paul Goins  <general@vultaire.net>

	* esp.typ: A mistake involving a not-yet-introduced key was corrected.
	  This was submitted by igor@tamarapatino.org, and credited to
	  Laura Victoria Quishpe <sekhmetnightmare@hotmail.com>.

2004-09-30  Dmitry Rutsky <balto@bk.ru>

	* ru.typ:	minor improvements.

2004-07-31  Dmitry Rutsky <rutsky@school.ioffe.rssi.ru>

	* q.typ:  some missing key fingering directions were added by
	  Iain Cunningham <iain.cunningham@ntlworld.com>.

2004-05-07  Dmitry Rutsky <rutsky@school.ioffe.rssi.ru>

	* ru.typ: corrected unlearned-key bug in IF_Ib lesson last exercise.
	  Thanks to Renat Sabitov <srr@stacksoft.ru> who has reported this!
	  He has also reported some spelling error on 18th February, which I've
	  fixed but somehow this change was lost.

2003-12-28  Michael Opdenacker <michaelo@gnu.org>

	* r.typ: corrected "may" by "many" on line 1198
	  (Reported by Sayan <Sebastien.Li-thiao-te@crans.org>)

2003-11-23  Dmitry Rutsky <rutsky@school.ioffe.rssi.ru>

	* kten.typ:  fixed several too long lines.

2003-08-31  Rob Leslie <rob@mars.org>

	* cs.typ, m.typ: Fixed a few small typos.

2003-08-28  Michael Opdenacker <michaelo@gnu.org>

	* d.typ: Fixed 2 small typos, reported by Rob Leslie <rob@mars.org>

2003-04-14  Hynek Hanke	<hanke@volny.cz>

	* cs.typ: Removed unnecessary K: commands.

2003-04-14  Felix Natter <fnatter@gmx.net>

	* v.typ, u.typ, t.typ, s.typ, r.typ, q.typ, n.typ, m.typ, f.typ:
	remove useless K:12:.*

2003-04-06  Felix Natter <fnatter@gmx.net>

	* esp.typ: use M: everywhere
	* demo.typ: add a menu
