@@ -1,3 +1,7 @@
+2011-08-07 Felix Natter <fnatter@gmx.net>
+	* kt*.typ: convert and rename lessons from ktouch 1.6
+	* ttde.typ: converted from tipptrainer 0.6.0
+
 2011-03-03  Tim Marston <edam@waxworlds.org>
 
 	* t.typ: punctuation error, reported to Debian by Percival Tiglao
